--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ stacks/dev/.terraform/providers/registry.terraform.io/hashicorp/azurerm/3.116.0/
 stacks/dev/.terraform/providers/registry.terraform.io/hashicorp/random/3.6.3/windows_amd64/LICENSE.txt
 stacks/dev/.terraform/providers/registry.terraform.io/hashicorp/random/3.6.3/windows_amd64/terraform-provider-random_v3.6.3_x5.exe
 stacks/dev/.terraform/modules/modules.json
+stacks/dev/.terraform.tfstate.lock.info
