--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,12 @@ stacks/dev/.terraform/providers/registry.terraform.io/hashicorp/random/3.6.3/win
 stacks/dev/.terraform/providers/registry.terraform.io/hashicorp/random/3.6.3/windows_amd64/terraform-provider-random_v3.6.3_x5.exe
 stacks/dev/.terraform/modules/modules.json
 stacks/dev/.terraform.tfstate.lock.info
+stacks/only_vms/dev.tfvars
+stacks/only_vms/.terraform.lock.hcl
+stacks/only_vms/terraform.tfstate.backup
+stacks/only_vms/terraform.tfstate
+stacks/only_vms/.terraform/modules/modules.json
+stacks/only_vms/.terraform/providers/registry.terraform.io/hashicorp/azurerm/3.116.0/windows_amd64/LICENSE.txt
+stacks/only_vms/.terraform/providers/registry.terraform.io/hashicorp/azurerm/3.116.0/windows_amd64/terraform-provider-azurerm_v3.116.0_x5.exe
+stacks/only_vms/.terraform/providers/registry.terraform.io/hashicorp/random/3.6.3/windows_amd64/LICENSE.txt
+stacks/only_vms/.terraform/providers/registry.terraform.io/hashicorp/random/3.6.3/windows_amd64/terraform-provider-random_v3.6.3_x5.exe
