--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,7 +9,7 @@ stages:
     - checkout: self
     - task: TerraformInstaller@0
       inputs:
-        terraformVersion: '1.5.0'
+        terraformVersion: '1.9.8'
 
     - task: AzureCLI@2
       inputs:
@@ -42,7 +42,7 @@ stages:
       inputs:
         command: 'plan'
         workingDirectory: '$(System.DefaultWorkingDirectory)/stacks/dev'
-        additionalArgs: '-out=tfplan -input=false'
+        additionalArgs: '-out=tfplan -input=false -var-file=$(System.DefaultWorkingDirectory)/stacks/dev/dev.tvars'
         environmentServiceName: 'TestingGroup'
 
     - publish: '$(System.DefaultWorkingDirectory)/terraform/tfplan'
